fix panning not working over div w/ overflow auto

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -29,6 +29,7 @@ body {
       overflow-x: hidden;
       overflow-y: auto;
       -webkit-overflow-scrolling: touch;
+      touch-action: pan-y; // fix for https://github.com/html-next/ember-gestures/issues/104
     }
   }
 
